loopfor.LoopCourse.scala.error
Erreur de compilation :
LoopCourse:3: error: value à is not a member of Int
    for (pas <- 1 à 8){
                  ^